--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 .env
 .DS_Store
+
+# IntelliJ IDEA-specific files
+.idea/
+*.iml
+*.iws
+.idea_modules/
+/backend/.run
+
+# VS Code-specific files
+.vscode/
+
+# Node and frontend build outputs
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
