--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 spring.application.name=backend
-
-# === Server Config ===
 server.port=8080
 
-# === Supabase PostgreSQL Config ===
+# Database configuration (read from environment)
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
-# === JPA / Hibernate ===
+# Optional Hibernate config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
