--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,22 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Redis connection settings
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+# If your Redis instance requires a password
+# spring.data.redis.password=your_password
+
+# Kafka Broker connection settings
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Producer configuration (for sending messages)
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# Consumer configuration (for receiving messages) JUST A SAMPLE TBC
+spring.kafka.consumer.group-id=clinic-queue-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
