--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -6,3 +6,5 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.flyway.enabled=false
 spring.liquibase.enabled=false
+spring.kafka.bootstrap-servers=disabled
+spring.kafka.listener.auto-startup=false
