--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,5 @@ services:
       - zookeeper
     ports:
       - "8080:8080"
-    environment:
-      DB_URL: ${DB_URL}
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:29092
+    env_file:
+      ./backend/.env
