--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.application.name=backend
 server.port=8080
 
+#Supabase configuration
+supabase.url=${SUPABASE_URL}
+supabase.key=${SERVICE_API_KEY}
+
+# Enable seeder only for the first run
+seeder.enabled=true
+
 # Database configuration (read from environment)
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
@@ -29,3 +36,5 @@ spring.kafka.consumer.group-id=clinic-queue-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+
