prevent db from repopulating when already populated

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ supabase.url=${SUPABASE_URL}
 supabase.key=${SERVICE_API_KEY}
 
 # Enable seeder only for the first run
-seeder.enabled=true
+seeder.enabled=false
 
 # Database configuration (read from environment)
 spring.datasource.url=${DB_URL}
