Revert "Merge branch 'rebecca/staffOperation' of https://github.com/Thykp/OOP_Project into rebecca/staffOperation"
This reverts commit b928004486cb04009b5d4912dee5da2777b05e83, reversing
changes made to a1ac544adc3bbf1db3733058ec8f6c3466b3b821.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,20 +2,13 @@
 spring.application.name=backend
 server.port=8080
 
-#Supabase configuration
-supabase.url=${SUPABASE_URL}
-supabase.key=${SERVICE_API_KEY}
-
-# Enable seeder only for the first run
-seeder.enabled=false
-
 # Database configuration (read from environment)
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
 # Optional Hibernate config
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
