--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,10 @@ services:
     container_name: backend
     depends_on:
       kafka:
-        condition: service_healthy
+        condition: service_started
     ports:
       - "8080:8080"
     env_file:
       ./backend/.env
+    tty: true
+    stdin_open: true
