--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,8 +5,12 @@ server.port=8080
 supabase.url=${SUPABASE_URL}
 supabase.key=${SERVICE_API_KEY}
 
+
 # Enable seeder only for the first run
+spring.main.web-application-type=servlet
 seeder.enabled=false
+app.runDoctorSeeder=false
+
 
 # Database configuration (read from environment)
 spring.datasource.url=${DB_URL}
@@ -14,7 +18,7 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
 # Optional Hibernate config
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
