--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -39,6 +39,7 @@ spring.data.redis.lettuce.pool.min-idle=0
 # spring.data.redis.password=your_password
 
 # Kafka Broker connection settings
+kafka.enabled=true
 spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:29092}
 
 # Producer configuration (for sending messages)
