auto generate class diagram into puml

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -159,6 +159,14 @@
 					<skipTests>true</skipTests>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<mainClass>com.is442.backend.util.PlantUmlDiagramGenerator</mainClass>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
