feat(notifications): emit N3_AWAY and NOW_SERVING + MailHog email plumbing

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -69,3 +69,11 @@ logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 logging.level.com.is442.backend=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%logger{36}] - %msg%n
+
+# --- Email (dev via MailHog) ---
+spring.mail.host=mailhog
+spring.mail.port=1025
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
