chore(email): wire SMTP env vars for prod testing (no secrets)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,9 @@ services:
       - "8080:8080"
     env_file:
       - ./backend/.env
+    environment:
+      SPRING_PROFILES_ACTIVE: prod
+      KAFKA_BOOTSTRAP_SERVERS: kafka:29092
     tty: true
     stdin_open: true
 
